Prevent logo to be incorrectly repositioned on mobile in the page editor

--- a/maywood/style-editor.css
+++ b/maywood/style-editor.css
@@ -1192,6 +1192,10 @@ b, strong {
 	}
 }
 
+.template-block .fse-template-part figure.fse-site-logo {
+	width: auto;
+}
+
 .fse-template-part .wp-block-cover .site-title,
 .fse-template-part .wp-block-cover .site-description,
 .fse-template-part .wp-block-cover-image .site-title,
