--- a/maywood/style-rtl.css
+++ b/maywood/style-rtl.css
@@ -4034,38 +4034,38 @@ p:not(.site-title) a:hover {
  * Full Site Editing
  * - Full Site Editing overrides
  */
-.fse-template {
+.fse-template-part {
 	margin-bottom: 0;
 	margin-top: 0;
 }
 
-.fse-template .main-navigation .has-text-color > .main-menu.footer-menu > li > a {
+.fse-template-part .main-navigation .has-text-color > .main-menu.footer-menu > li > a {
 	color: inherit;
 }
 
-.fse-template .main-navigation .has-text-align-left > .main-menu.footer-menu {
+.fse-template-part .main-navigation .has-text-align-left > .main-menu.footer-menu {
 	justify-content: flex-start;
 }
 
-.fse-template .main-navigation .has-text-align-center > .main-menu.footer-menu {
+.fse-template-part .main-navigation .has-text-align-center > .main-menu.footer-menu {
 	justify-content: center;
 }
 
-.fse-template .main-navigation .has-text-align-right > .main-menu.footer-menu {
+.fse-template-part .main-navigation .has-text-align-right > .main-menu.footer-menu {
 	justify-content: flex-end;
 }
 
-.fse-template .main-navigation .has-background > .main-menu.footer-menu {
+.fse-template-part .main-navigation .has-background > .main-menu.footer-menu {
 	padding: 16px 0;
 }
 
 @media only screen and (min-width: 560px) {
-	.fse-template .main-navigation .has-background > .main-menu.footer-menu {
+	.fse-template-part .main-navigation .has-background > .main-menu.footer-menu {
 		padding: 16px;
 	}
 }
 
-.fse-template .main-navigation > div > .main-menu.footer-menu > .menu-item-has-children > a::after {
+.fse-template-part .main-navigation > div > .main-menu.footer-menu > .menu-item-has-children > a::after {
 	font-size: 0.6em;
 	vertical-align: middle;
 }
@@ -4107,25 +4107,25 @@ p:not(.site-title) a:hover {
 	}
 }
 
-.fse-template .main-navigation a {
+.fse-template-part .main-navigation a {
 	text-decoration: none;
 }
 
 @media only screen and (max-width: 559px) {
-	.fse-template {
+	.fse-template-part {
 		max-width: calc( 100% - 32px);
 	}
-	.fse-template .main-navigation > div {
+	.fse-template-part .main-navigation > div {
 		padding: 0 32px;
 	}
 }
 
-.fse-template .wp-block-cover .site-title a,
-.fse-template .wp-block-cover-image .site-title a {
+.fse-template-part .wp-block-cover .site-title a,
+.fse-template-part .wp-block-cover-image .site-title a {
 	text-decoration: none;
 }
 
-.fse-template .wp-block-cover .has-background,
-.fse-template .wp-block-cover-image .has-background {
+.fse-template-part .wp-block-cover .has-background,
+.fse-template-part .wp-block-cover-image .has-background {
 	text-shadow: none;
 }
