--- a/varia/sass/full-site-editing/_editor.scss
+++ b/varia/sass/full-site-editing/_editor.scss
@@ -14,6 +14,10 @@
 		@include media(mobile) {
 			padding: #{map-deep-get($config-global, "spacing", "vertical")} 0;
 		}
+
+		figure.fse-site-logo {
+			width: auto;
+		}
 	}
 }
 
